--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,16 +2,27 @@
 layout: default
 ---
 
-<article class="post">
-  <h1>{{ page.title }}</h1>
+<article>
 
-  <div class="entry">
-    {{ content }}
-  </div>
+	<div class="center">
+		<h1>{{ page.title }}</h1>
+		<time>{{ page.date | date: '%B %-d, %Y' }}</time>
+	</div>
 
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
-  </div>
+	<div class="divider"></div>
 
-  {% include disqus.html %}
+	{{ content }}
+
 </article>
+
+<div class="page-navigation">
+	{% if page.next.url %}
+    <a class="next" href="{{page.next.url}}" title="NEXT: {{page.next.title}}">&lt;&lt;</a>
+		<span> &middot; </span>
+  {% endif %}
+		<a class="home" href="{{site.baseurl}}/" title="Back to Homepage">Home</a>
+  {% if page.previous.url %}
+		<span> &middot; </span>
+    <a class="prev" href="{{page.previous.url}}" title="PREV: {{page.previous.title}}">&gt;&gt;</a>
+  {% endif %}
+</div>
